syntax="proto3";

package message;

message ValueTransfer {
  string address = 1;
  uint64 value = 2;
}

message OpReturnMsg {
  string msg = 1;
}

message TxResult {
  oneof Result {
    ValueTransfer transfer = 1;
    OpReturnMsg   msg = 2;
  }
}

message ProcessedTx {
  string Txid = 1;
  repeated TxResult Result = 2;
}

message ProcessedBlock {
  int32 BlockIndex = 1;
  repeated  ProcessedTx Txs = 2;
}